Create working leaderboard with a dark design

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,2 +1,13 @@
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Condiment|Roboto');
 
-// Add styles here
+// Variables
+@import 'variables';
+
+// Bulma
+@import '~bulma/bulma';
+
+// Core
+@import 'core/layout';
+@import 'core/table';
+@import 'core/loading';
